--- a/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
+++ b/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="mainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="userDashboard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mainMenu.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="userDashboard.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
