--- a/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
+++ b/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="userDashboard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="baseHeader.hpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
