--- a/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj
+++ b/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj
@@ -118,6 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,9 +128,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\Downloads\sqlite\sqlite-amalgamation-3440200\sqlite3.c" />
     <ClCompile Include="baseHeader.hpp" />
     <ClCompile Include="mainMenu.cpp" />
+    <ClCompile Include="sqlite3.c" />
     <ClCompile Include="userDashboard.cpp" />
     <ClCompile Include="WillRetriever.cpp" />
   </ItemGroup>
