--- a/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
+++ b/Application/WillRetriever/WillRetriever/WillRetriever.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="WillRetriever.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\Downloads\sqlite\sqlite-amalgamation-3440200\sqlite3.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="mainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -29,6 +26,9 @@
     </ClCompile>
     <ClCompile Include="baseHeader.hpp">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sqlite3.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
